--- a/examples/mistral/lora.yml
+++ b/examples/mistral/lora.yml
@@ -1,26 +1,40 @@
-base_model: mistralai/Mistral-7B-v0.1
+base_model: mistralai/Mistral-7B-Instruct-v0.3
 model_type: MistralForCausalLM
-tokenizer_type: LlamaTokenizer
+tokenizer_type: AutoTokenizer
 
-load_in_8bit: true
+load_in_8bit: false
 load_in_4bit: false
 strict: false
 
+chat_template: inst
 datasets:
-  - path: mhenrichsen/alpaca_2k_test
-    type: alpaca
+  - path: train_SOAP_conversations.jsonl
+    ds_type: json
+    type: chat_template
+    chat_template: inst
+    field_messages: messages
+    message_field_role: role
+    message_field_content: content
+    roles_to_train: ["assistant"]
+    max_length: 16384
+    roles:
+      user:
+        - user
+      assistant:
+        - assistant
+
 dataset_prepared_path: last_run_prepared
-val_set_size: 0.1
-output_dir: ./outputs/lora-out
-
+val_set_size: 0.01
+output_dir: ./outputs-mistral-lora-8-1e-4-merged
+dataset_processes: 12
 adapter: lora
-lora_model_dir:
+lora_model_dir: 
 
-sequence_len: 8192
+sequence_len: 16384
 sample_packing: true
 pad_to_sequence_len: true
 
-lora_r: 32
+lora_r: 8
 lora_alpha: 16
 lora_dropout: 0.05
 lora_target_linear: true
@@ -34,18 +48,18 @@ lora_target_modules:
   - k_proj
   - o_proj
 
-wandb_project:
-wandb_entity:
+wandb_project: LORA
+wandb_entity: kunwarsaaim-vector-institute-for-artificial-intelligence
 wandb_watch:
-wandb_name:
-wandb_log_model:
+wandb_name: Mistral_7B_LORA_R8
+wandb_log_model: checkpoint
 
 gradient_accumulation_steps: 4
-micro_batch_size: 2
-num_epochs: 1
-optimizer: adamw_bnb_8bit
+micro_batch_size: 1
+num_epochs: 4
+optimizer: adamw_torch
 lr_scheduler: cosine
-learning_rate: 0.0002
+learning_rate: 0.00001
 
 train_on_inputs: false
 group_by_length: false
@@ -53,6 +67,7 @@ bf16: auto
 fp16:
 tf32: false
 
+lora_on_cpu: true
 gradient_checkpointing: true
 early_stopping_patience:
 resume_from_checkpoint:
@@ -65,13 +80,15 @@ loss_watchdog_threshold: 5.0
 loss_watchdog_patience: 3
 
 warmup_steps: 10
-evals_per_epoch: 4
+evals_per_epoch: 2
 eval_table_size:
-eval_max_new_tokens: 128
-saves_per_epoch: 1
+eval_max_new_tokens: 2048
+saves_per_epoch: 2
 debug:
 deepspeed:
 weight_decay: 0.0
 fsdp:
 fsdp_config:
 special_tokens:
+
+auto_resume_from_checkpoints: false
